working with db 3

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,9 @@ services:
     name: scrumping-map
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install -r requirements.txt
+      python init_db.py  # <-- this line runs your DB init script after installing requirements
     startCommand: gunicorn app:app
     envVars:
       - key: FLASK_ENV
